--- a/index.html
+++ b/index.html
@@ -15,12 +15,27 @@
             background-color: #f0f0f0;
             color: #333;
         }
-        h1 {
+        .box {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px 40px;
+            border-radius: 20px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .box h1 {
             font-size: 2rem;
+            margin-bottom: 10px;
+        }
+        .box p {
+            font-size: 1rem;
+            color: #555;
         }
     </style>
 </head>
 <body>
-    <h1>Currently Under Development</h1>
+    <div class="box">
+        <h1>Currently Under Development</h1>
+        <p>Come back every weekend for updates!</p>
+    </div>
 </body>
 </html>
