--- a/MyWebsite.html
+++ b/MyWebsite.html
@@ -3,7 +3,7 @@
         <meta charset="\UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AnthonyPG</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Style.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -18,4 +18,5 @@
         <li><a href="projects.html">📁 Projects</a></li>
         <li><a href="about.html">👤 About Me</a></li>
     </body>
+
 </html>
