--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         </header>
 <div class="main-menu">
     <ul class="menu">
-        <li><a href="home.html">🏠 Home</a></li>
-        <li><a href="projects.html">📁 Projects</a></li>
-        <li><a href="about.html">👤 About Me</a></li>
+        <li><a href="home.html"> Home</a></li>
+        <li><a href="projects.html"> Projects</a></li>
+        <li><a href="about.html"> About Me</a></li>
     </body>
 </html>
+
