--- a/about.html
+++ b/about.html
@@ -1,56 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Development</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-        .box {
-            text-align: center;
-            background-color: #fff;
-            padding: 20px 40px;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-        .box h1 {
-            font-size: 2rem;
-            margin-bottom: 10px;
-        }
-        .box p {
-            font-size: 1rem;
-            color: #555;
-            margin-bottom: 20px;
-        }
-        .go-back {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #0074D9;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 10px;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-        .go-back:hover {
-            background-color: #005fa3;
-        }
-    </style>
-</head>
-<body>
-    <div class="box">
-        <h1>Currently Under Development</h1>
-        <p>Come back every weekend for updates!</p>
-        <a href="index.html" class="go-back">🔙 Go Back</a>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>About Me</title>
+    <link rel="stylesheet" href="AboutStyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="top-boxes">
+        <div class="info-box">
+          <h1>A Level Subjects</h1>
+          <ul>
+            <li>Computer Science</li>
+            <li>Engineering</li>
+            <li>Photography</li>
+          </ul>
+        </div>
+        <div class="info-box">
+          <h1>Programming Languages</h1>
+          <ul>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+          <p>Currently studying and improving my knowledge in these languages.</p>
+        </div>
+      </div>
+      <div class="info-box socials-box">
+        <h1>Socials</h1>
+        <div class="social-icons">
+          <a href="https://github.com/Anthony-PG" target="_blank">
+            <img src="GitHub.png" alt="GitHub" class="icon" />
+          </a>
+          <a href="https://www.linkedin.com/in/anthony-pg-6a6242282" target="_blank">
+            <img src="Linkedin.png" alt="LinkedIn" class="icon" />
+          </a>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
