--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AnthonyPG</title>
-        <link rel="stylesheet" href="Style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <div class="Title">
-                <h1>AnthonyPG</h1>
-            </div>
-        </header>
-<div class="main-menu">
-    <ul class="menu">
-        <li><a href="home.html"> Home </a></li>
-        <li><a href="projects.html"> Projects </a></li>
-        <li><a href="about.html"> About Me </a></li>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AnthonyPG</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Style.css">
+</head>
+<body>
+
+    <header>
+        <h1 class="title">AnthonyPG</h1>
+    </header>
+
+    <nav class="main-menu">
+        <ul class="menu">
+            <li><a href="index.html" class="active">🏠 Home</a></li>
+            <li><a href="projects.html">📁 Projects</a></li>
+            <li><a href="about.html">👤 About Me</a></li>
+        </ul>
+    </nav>
+
+    <main class="home-content">
+        <p>An A level Student, working towards becoming a UI/UX designer.</p>
+    </main>
+
+</body>
 </html>
-
-
