--- a/about.html
+++ b/about.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>About Me</title>
-    <link rel="stylesheet" href="AboutStyle.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="top-boxes">
-        <div class="info-box">
-          <h1>A Level Subjects</h1>
-          <ul>
-            <li>Computer Science</li>
-            <li>Engineering</li>
-            <li>Photography</li>
-          </ul>
-        </div>
-        <div class="info-box">
-          <h1>Programming Languages</h1>
-          <ul>
-            <li>Python</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-          </ul>
-          <p>Currently studying and improving my knowledge in these languages.</p>
-        </div>
-      </div>
-      <div class="info-box socials-box">
-        <h1>Socials</h1>
-        <div class="social-icons">
-          <a href="https://github.com/Anthony-PG" target="_blank">
-            <img src="GitHub.png" alt="GitHub" class="icon" />
-          </a>
-          <a href="https://www.linkedin.com/in/anthony-pg-6a6242282" target="_blank">
-            <img src="Linkedin.png" alt="LinkedIn" class="icon" />
-          </a>
-        </div>
-      </div>
-    </div>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me – AnthonyPG</title>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="AboutStyle.css">
+</head>
+<body>
+
+    <header>
+        <h1 class="title">About Me</h1>
+    </header>
+
+    <nav class="main-menu">
+        <ul class="menu">
+            <li><a href="index.html">🏠 Home</a></li>
+            <li><a href="projects.html">📁 Projects</a></li>
+            <li><a href="about.html" class="active">👤 About Me</a></li>
+        </ul>
+    </nav>
+
+    <main class="about-container">
+        <section class="about-box">
+
+            <h2>Hi, I'm Anthony</h2>
+            <p class="subtitle">A Level Student & Aspiring UI/UX Designer</p>
+
+            <div class="section">
+                <h3>What I Study</h3>
+                <ul>
+                    <li>Computer Science</li>
+                    <li>Photography</li>
+                    <li>Engineering</li>
+                </ul>
+            </div>
+
+            <div class="section">
+                <h3>Career Goal</h3>
+                <p>I aim to become a professional UI/UX designer, creating meaningful and user-focused digital experiences.</p>
+            </div>
+
+            <div class="section">
+                <h3>Skills & Languages</h3>
+                <ul>
+                    <li>Python</li>
+                    <li>HTML & CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+
+            <div class="section">
+                <h3>Find Me Online</h3>
+                <div class="contact-icons">
+                    <a href="https://github.com/Anthony-PG" target="_blank">
+                        <img src="assets/github.png" alt="GitHub">
+                    </a>
+                    <a href="https://www.linkedin.com/in/anthony-pg-6a6242282/" target="_blank">
+                        <img src="assets/linkedin.png" alt="LinkedIn">
+                    </a>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
+</body>
 </html>
