Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -54,10 +54,10 @@
                 <h3>Find Me Online</h3>
                 <div class="contact-icons">
                     <a href="https://github.com/Anthony-PG" target="_blank">
-                        <img src="assets/github.png" alt="GitHub">
+                        <img src="github.png" alt="GitHub">
                     </a>
                     <a href="https://www.linkedin.com/in/anthony-pg-6a6242282/" target="_blank">
-                        <img src="assets/linkedin.png" alt="LinkedIn">
+                        <img src="linkedin.png" alt="LinkedIn">
                     </a>
                 </div>
             </div>
@@ -67,3 +67,4 @@
 
 </body>
 </html>
+
