--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
             <article class="project-card">
                 <h3>UCAS Portfolio</h3>
-                <a href="assets/ucas-portfolio.pdf" target="_blank" class="project-link">View PDF</a>
+                <a href="ucas-portfolio.pdf" target="_blank" class="project-link">View PDF</a>
             </article>
 
             <article class="project-card">
@@ -45,3 +45,4 @@
 
 </body>
 </html>
+
