--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AnthonyPG</title>
+    <title>AnthonyPG – Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
-    <header>
-        <h1 class="title">AnthonyPG</h1>
+    <header class="site-header option1">
+        <div class="nav-left">
+            <h1 class="logo">AnthonyPG</h1>
+        </div>
+
+        <nav class="main-menu">
+            <ul class="menu">
+                <li><a href="index.html" class="active">🏠 Home</a></li>
+                <li><a href="projects.html">📁 Projects</a></li>
+                <li><a href="about.html">👤 About Me</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <nav class="main-menu">
-        <ul class="menu">
-            <li><a href="index.html" class="active">🏠 Home</a></li>
-            <li><a href="projects.html">📁 Projects</a></li>
-            <li><a href="about.html">👤 About Me</a></li>
-        </ul>
-    </nav>
-
-    <main class="home-content">
-        <p>An A level Student, working towards becoming a UI/UX designer.</p>
+    <main class="home-wrapper">
+        <div class="home-text">
+            <h2>Aspiring UI/UX Designer</h2>
+            <p>Focused on creating clean, modern and meaningful user experiences.</p>
+        </div>
     </main>
 
 </body>
