Refactor projects.html structure and header

--- a/projects.html
+++ b/projects.html
@@ -9,17 +9,19 @@
 </head>
 <body>
 
-    <header>
-        <h1 class="title">Projects</h1>
-    </header>
+    <header class="site-header option1">
+        <div class="nav-left">
+            <h1 class="logo">AnthonyPG</h1>
+        </div>
 
-    <nav class="main-menu">
-        <ul class="menu">
-            <li><a href="index.html">🏠 Home</a></li>
-            <li><a href="projects.html" class="active">📁 Projects</a></li>
-            <li><a href="about.html">👤 About Me</a></li>
-        </ul>
-    </nav>
+        <nav class="main-menu">
+            <ul class="menu">
+                <li><a href="index.html">🏠 Home</a></li>
+                <li><a href="projects.html" class="active">📁 Projects</a></li>
+                <li><a href="about.html">👤 About Me</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="projects">
         <h2 class="projects-heading">Selected Work</h2>
@@ -45,7 +47,3 @@
 
 </body>
 </html>
-
-
-
-
