--- a/about.html
+++ b/about.html
@@ -9,17 +9,19 @@
 </head>
 <body>
 
-    <header>
-        <h1 class="title">About Me</h1>
-    </header>
+    <header class="site-header option1">
+        <div class="nav-left">
+            <h1 class="logo">AnthonyPG</h1>
+        </div>
 
-    <nav class="main-menu">
-        <ul class="menu">
-            <li><a href="index.html">🏠 Home</a></li>
-            <li><a href="projects.html">📁 Projects</a></li>
-            <li><a href="about.html" class="active">👤 About Me</a></li>
-        </ul>
-    </nav>
+        <nav class="main-menu">
+            <ul class="menu">
+                <li><a href="index.html">🏠 Home</a></li>
+                <li><a href="projects.html">📁 Projects</a></li>
+                <li><a href="about.html" class="active">👤 About Me</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="about-container">
         <section class="about-box">
@@ -67,4 +69,3 @@
 
 </body>
 </html>
-
