Modify project card titles and links
Updated project card titles and links in projects.html.

--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,8 @@
         <section class="projects-grid">
 
             <article class="project-card">
-                <h3>UCAS Portfolio</h3>
-                <a href="Ucas.pdf" target="_blank" class="project-link">View PDF</a>
+                <h3>Project</h3>
+                <a href="#" target="_blank" class="project-link">View Project</a>
             </article>
 
             <article class="project-card">
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
